# altx

./: .gitignore  .pre-commit-config.yaml  README.md  development.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  usage.html
.github/workflows/: build-docs.yml  pre-commit.yml  tests.yml
_modules/: index.html
_modules/altx/: altx.html  extract_methods.html
_sources/: index.rst.txt
_sources/api/: modules.rst.txt
_static/: development.md  documentation_options.js
altx/: ALT.py  __init__.py  altx.py  extract_methods.py
api/: altx.altx.html  altx.extract_methods.html  altx.html  modules.html
docs/source/: conf.py  development.md  index.rst  installation.md  usage.md
docs/source/api/: altx.altx.rst  altx.extract_methods.rst  altx.rst
examples/: GunPoint_example.py
tests/: test_altx.py  test_extract_methods.py
