[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "altx"
version = "1.0.0"
description = "Adaptive Law-Based Transformation (ALT) for time series classification."
authors = [
    { name = "Marcell Tamás Kurbucz", email = "m.kurbucz@ucl.ac.uk" }
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0"
license-files = ["LICENSE*"]

dependencies = [
    "numpy>=2.0",
    "pandas>=2.0",
    "torch>=2.12",
    "matplotlib>=3.10"
]

[project.optional-dependencies]
examples = ["aeon>=1.4"]

[tool.setuptools]
packages = ["altx"]
